--- a/20220714_Okunoshima_Onepager-web-resources/css/idGeneratedStyles.css
+++ b/20220714_Okunoshima_Onepager-web-resources/css/idGeneratedStyles.css
@@ -5,6 +5,7 @@ body, div, dl, dt, dd, h1, h2, h3, h4, h5, h6, p, pre, code, blockquote {
 }
 body {
 	-epub-hyphens:auto;
+	background-color: #330000;
 }
 div.Einfacher-Textrahmen {
 	border-style:solid;
